# .LibOps.

./: .gitignore  Jenkinsfile  README.md  docker-compose.prod.yml  docker-compose.yml  run_guide.md  sonar-project.properties
.gemini/: fixes.md  project_overview.md  prompt.md  ui_ux_redesign.md
backend/: .env.example  Dockerfile  fix_covers.py  pyproject.toml  seed_books.py
backend/alembic/: env.py
backend/alembic/versions/: a1aa643b2e00_create_initial_schema.py
backend/app/: main.py
backend/app/api/: api_router.py  deps.py
backend/app/api/endpoints/: books.py  borrow.py  login.py  users.py
backend/app/core/: config.py  logging.py  security.py
backend/app/crud/: __init__.py  crud_book.py  crud_borrow.py  crud_user.py
backend/app/db/: session.py
backend/app/models/: __init__.py  books.py  borrowrecord.py  enums.py  mixins.py  user.py
backend/app/schemas/: __init__.py  book.py  borrow.py  user.py
backend/app/utils/: storage.py
backend/tests/: conftest.py
backend/tests/api/: __init__.py  test_login.py  test_users.py
frontend/: Dockerfile  index.html  nginx.conf
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/: Navbar.tsx
frontend/src/pages/: AdminDashboard.tsx  Books.tsx  BorrowHistory.tsx  Dashboard.tsx  Login.tsx  Register.tsx
frontend/src/types/: user.ts
jenkins/: Dockerfile
scripts/: deploy.sh  quality.sh  start-jenkins.sh
terraform/: compute.tf  iam.tf  monitoring.tf  network.tf  outputs.tf  s3.tf  security.tf  variables.tf
