[project]
name = "libops-backend"
version = "0.1.0"
description = "Backend API for the LibOps Library Management System"
readme = "../README.md"
requires-python = ">=3.12"

authors = [
    { name = "Mohamed Safiq S" }
]

dependencies = [
    # FastAPI
    "fastapi>=0.116.0",
    "uvicorn[standard]>=0.35.0",
    # Configuration
    "pydantic>=2.11.0",
    "pydantic-settings>=2.10.0",
    "python-dotenv>=1.1.0",
    "pydantic-settings[toml]",
    # Database
    "sqlalchemy>=2.0.40",
    "alembic>=1.16.0",
    "psycopg[binary]>=3.2.0",
    # Authentication
    "python-jose[cryptography]>=3.5.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.20",
]

[dependency-groups]
dev = [
    "pytest>=8.4.0",
    "httpx>=0.28.0",
    "ruff>=0.12.0",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
